// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/FontWeight Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 400,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-normal)
      </span>
      <span
        className="label"
      >
        400
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/FontWeight Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 100,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-hairline)
      </span>
      <span
        className="label"
      >
        100
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 200,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-thin)
      </span>
      <span
        className="label"
      >
        200
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 300,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-light)
      </span>
      <span
        className="label"
      >
        300
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 400,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-normal)
      </span>
      <span
        className="label"
      >
        400
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 500,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-medium)
      </span>
      <span
        className="label"
      >
        500
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 600,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-semibold)
      </span>
      <span
        className="label"
      >
        600
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 700,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-bold)
      </span>
      <span
        className="label"
      >
        700
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 800,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-extrabold)
      </span>
      <span
        className="label"
      >
        800
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="font-weight"
      style={
        Object {
          "fontWeight": 900,
        }
      }
    >
      Cheap doors deny rune Mithrandir spawning brown dishes?
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--font-weight-black)
      </span>
      <span
        className="label"
      >
        900
      </span>
    </div>
  </div>
</div>
`;
